# arc-competition

./: .gitignore  README.md  pyproject.toml
notebooks/: explore.ipynb
src/arc_competition/: __init__.py  agents.py  config.py  logging_config.py  schemas.py  task_viewer.py  utils.py
