[project]
name = "arc-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Fernando Mazzoni", email = "fernando1mazzoni@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "pillow>=10.0.0",
    "anthropic>=0.68.1",
    "atomic-agents>=2.2.0",
    "pydantic-settings>=2.11.0",
    "instructor>=1.9.0",
    "e2b-code-interpreter>=2.0.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.0.0",
    "ruff>=0.13.3",
]
